# statstack-Insights_Finder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: run-tests.yml
libs/curl/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
src/: CsvPersonReader.cpp  CsvPersonReader.h  CsvPersonWriter.cpp  CsvPersonWriter.h  HtmlReportWriter.cpp  HtmlReportWriter.h  Insight.h  InsightGenerator.cpp  InsightGenerator.h  InsightsApp.cpp  InsightsApp.h  JsonPersonReader.cpp  JsonPersonReader.h  MockPersonReader.cpp  MockPersonReader.h  Person.cpp  Person.h  PersonCollectionUtils.cpp  PersonCollectionUtils.h  PersonEnums.cpp  PersonEnums.h  PersonReader.h  RandomPersonReader.cpp  RandomPersonReader.h
tests/: test_Csv.cpp  test_Json.cpp  test_Mock.cpp  test_Person.cpp  test_PersonCollectionUtils.cpp
